# IronLink-UltraFast-RustMessaging

./: .gitignore
.github/workflows/: coverage.yml  rust.yml  test.yml
client/: .cloud.env  .env  Cargo.toml  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/assets/: common.css
client/src/components/: ProtectedRoute.tsx
client/src/components/ChatArea/: ChatArea.module.css  ChatArea.tsx
client/src/components/ChatHeader/: ChatHeader.module.css  ChatHeader.tsx
client/src/components/ChatInfo/: ChatInfo.module.css  ChatInfo.tsx
client/src/components/ChatInput/: ChatInput.module.css  ChatInput.tsx
client/src/components/ChatMessage/: ChatMessage.module.css  ChatMessage.tsx
client/src/components/ProfileModal/: ProfileModal.module.css  ProfileModal.tsx
client/src/components/SideChatCard/: SideChatCard.module.css  SideChatCard.tsx
client/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
client/src/context/: AuthContext.tsx  WebSocketContext.tsx
client/src/hooks/: useNotifications.ts
client/src/models/: Chat.ts  types.ts
client/src/pages/Home/: Home.module.css  Home.tsx
client/src/pages/Login/: Login.module.css  Login.tsx
client/src/services/: api.ts
docs/: CPU_MONITORING.md  MANUALE_UTENTE.md  README.md  RUGGINE_DOC.md  TESTING.md  server.plantuml
server/: .env  CPU_MONITORING.md  Cargo.toml  README.md  tarpaulin-report.html
server/fixtures/: chats.sql  invitations.sql  messages.sql  users.sql
server/migrations/: 1_create_database.sql
server/scripts/: create_tables.sql  grant_test_permissions.sql
server/src/: auth.rs  config.rs  dtos.rs  entities.rs  error_handler.rs  handlers.rs  lib.rs  main.rs  models.rs  monitoring.rs  repositories.rs  routes.rs  services.rs  ws_services.rs
server/src/core/: auth.rs  config.rs  error.rs  mod.rs  state.rs
server/src/db/: schema.sql
server/src/dtos/: chat.rs  invitation.rs  message.rs  mod.rs  query.rs  user.rs  user_chat_metadata.rs  ws_event.rs
server/src/entities/: chat.rs  enums.rs  invitation.rs  message.rs  mod.rs  user.rs  user_chat_metadata.rs
server/src/repositories/: chat.rs  invitation.rs  message.rs  mod.rs  traits.rs  user.rs  user_chat_metadata.rs
server/src/services/: admin.rs  auth.rs  chat.rs  membership.rs  mod.rs  user.rs
server/src/ws/: chatmap.rs  connection.rs  event_handlers.rs  mod.rs  usermap.rs  utils.rs
server/tests/: api_auth.rs  api_chats.rs  api_users.rs  api_websocket.rs
server/tests/common/: mod.rs
server/tools/: compute_cpu_stats.ps1
