[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
chrono = "0.4.42"
dotenv = "0.15.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"
tower = "0.5.2"
hyper = "1.7.0"
async-trait = "0.1.89"
