[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.42" , features = ["serde"]}
dotenv = "0.15.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
# tokio-tungstenite = "0.27.0"
# tower-http = { version = "0.6.6", features = ["trace"] }
# tracing = "0.1.41"
# tracing-subscriber = "0.3.20"
# tower = "0.5.2"
# hyper = "1.7.0"
# async-trait = "0.1.89"
# anyhow = "1.0.100"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
axum-macros = "0.5.0"
dashmap = "6.1.0"
futures-util = "0.3.31"
futures = "0.3.31"
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.5"
regex = "1.11"
