[package]
name = "server"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"        
lto = true             
codegen-units = 1      
panic = "abort"        
strip = true     

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "serde"] }
dotenv = { version = "0.15", default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "tracing"
] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
axum-macros = "0.5.0"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.5"
regex = { version = "1.11", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["io-util","sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
sysinfo = { version = "0.32.1", default-features = false, features = ["system"] }

[dev-dependencies]
axum-test = "18.1.0"
tokio-tungstenite = "0.24.0"

